--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
   <script type="text/babel">
     const { useState } = React;
+    const BACKEND_URL = "https://ai-lead-scorer-backend.onrender.com";
+
 
     // Icons...
     const SparklesIcon = () => (
